Implement routing table API
