# common/model/src/main/java/org/hpcclab/oaas/model/cr/OClassRuntime.java
@@ -14,7 +14,7 @@ public record OClassRuntime(
   String template,
   List<OClass> attachedCls,
   List<OFunction> attachedFn,
-  OcrRouting routing,
+  OcrRouting.PartitionRouting routing,
   String namespace,
   CrState state,
   boolean deleted,
